# LaPoisSolver

./: .gitignore  CMakeLists.txt  README.md
examples/: coaxial_cylinders.cpp  parallel_plates.cpp  quadrupole.cpp  solver_benchmark.cpp
include/geometry/: boundary.h  grid.h  scenarios.h
include/solvers/: gauss_seidel.h  jacobi.h  solver_base.h  sor.h
include/utils/: field_export.h  output_path.h
scripts/: visualize.py
src/geometry/: boundary.cpp  grid.cpp  scenarios.cpp
src/solvers/: gauss_seidel.cpp  jacobi.cpp  solver_base.cpp  sor.cpp
src/utils/: field_export.cpp
tests/: test_solvers.cpp
